Implemented docker and kubernetes using AWS EKS